Export app name, group and version into gradle.properties

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,6 +1,5 @@
 FROM @dockerContainerFrom@
 RUN pacman -Syyu --noconfirm
 RUN pacman -S jre8-openjdk-headless --noconfirm
-ADD raspalarm-server-0.1.0.jar app.jar
-EXPOSE 8080
+ADD @dockerContainerJarName@-@dockerContainerJarVersion@.jar app.jar
 ENTRYPOINT [ "java", "-jar", "/app.jar" ]
