--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import org.apache.tools.ant.filters.ReplaceTokens
 
 buildscript {
     repositories {
@@ -11,7 +12,7 @@ buildscript {
     }
 }
 
-group = "rocklass"
+group = appGroup
 
 apply plugin: "java"
 apply plugin: "eclipse"
@@ -25,8 +26,8 @@ targetCompatibility = 1.8
 loadConfiguration()
 
 jar {
-    baseName = "raspalarm-server"
-    version = "0.1.0"
+    baseName = appName
+    version = appVersion
 }
 
 repositories {
@@ -47,7 +48,7 @@ def loadConfiguration() {
     def environment = hasProperty("env") ? env : "dev"
 
     Properties properties = new Properties()
-    properties.load(project.file("src/main/profile/" + environment + "/env.properties").newDataInputStream())
+    properties.load(project.file("src/main/profile/$environment/env.properties").newDataInputStream())
     properties.each { property ->
         project.ext.set(property.key, property.value)
     }
@@ -55,14 +56,16 @@ def loadConfiguration() {
 
 task dockerBuildImage(type: DockerBuildImage, dependsOn: ":processDockerRessources") {
     inputDir = project.file("build/docker")
-    tag = "rocklass/raspalarm-server"
+    tag = "$appGroup/$appName"
 }
 
 task processDockerRessources(type: Copy, dependsOn: ":build") {
     from ("src/main/docker") {
-        filter {
-            it.replaceAll("@dockerContainerFrom@", project.dockerContainerFrom as String)
-        }
+        filter(ReplaceTokens, tokens: [
+                dockerContainerFrom: project.dockerContainerFrom,
+                dockerContainerJarName: jar.baseName,
+                dockerContainerJarVersion: jar.version
+        ])
     }
     from ("build/libs") {
         include("*.jar")
