--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import org.apache.tools.ant.filters.ReplaceTokens
 
+apply from: "buildsystem/dependencies.gradle"
+
 buildscript {
     repositories {
         jcenter()
@@ -31,8 +33,8 @@ jar {
 }
 
 dependencies {
-    compile     "org.springframework.boot:spring-boot-starter-web"
-    testCompile "org.springframework.boot:spring-boot-starter-test"
+    compile     projectDependencies.springBootStarterWeb
+    testCompile projectTestDependencies.springBootStarterTest
 }
 
 docker {
