Send push notification with Firebase Cloud Messaging

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ jar {
 }
 
 dependencies {
+    compile     projectDependencies.fcmJavaCore
+    compile     projectDependencies.fcmJavaClient
     compile     projectDependencies.springBootStarterWeb
     testCompile projectTestDependencies.springBootStarterTest
 }
