--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -21,7 +21,7 @@ RUN set -x \
     && [ "$JAVA_HOME" = "$(docker-java-home)" ]
 
 # install packages
-RUN apk --update --no-cache add openrc zoneminder mysql mysql-client lighttpd php5-fpm php5-pdo php5-pdo_mysql
+RUN apk --update --no-cache add openrc bash curl zoneminder mysql mysql-client lighttpd php5-fpm php5-pdo php5-pdo_mysql
 
 # configure openrc
 RUN sed -i 's/#rc_sys=""/rc_sys="lxc"/g' /etc/rc.conf \
@@ -32,24 +32,38 @@ RUN sed -i 's/#rc_sys=""/rc_sys="lxc"/g' /etc/rc.conf \
     && sed -i 's/mount -t tmpfs/# mount -t tmpfs/g' /lib/rc/sh/init.sh \
     && sed -i 's/cgroup_add_service /# cgroup_add_service /g' /lib/rc/sh/openrc-run.sh
 
-# create zoneminder database
-RUN mkdir -p /run/mysqld \
+# configure zoneminder
+RUN MYSQL_DATABASE="zm" \
+    && MYSQL_USER="zmuser" \
+    && MYSQL_PASSWORD="zmuser" \
+    && mkdir -p /run/mysqld \
     && chown -R mysql:mysql /run/mysqld \
     && chown -R mysql:mysql /var/lib/mysql \
     && mysql_install_db --user=mysql > /dev/null \
     && tfile=`mktemp` \
-    && MYSQL_DATABASE="zm" \
-    && MYSQL_USER="zmuser" \
-    && MYSQL_PASSWORD="zmuser" \
-    && MYSQL_ROOT_PASSWORD="root_password" \
     && echo "USE mysql;" >> $tfile \
     && echo "FLUSH PRIVILEGES;" >> $tfile \
     && echo "CREATE DATABASE $MYSQL_DATABASE;" >> $tfile \
     && echo "CREATE USER $MYSQL_USER@localhost IDENTIFIED BY '$MYSQL_PASSWORD';" >> $tfile \
-    && echo "GRANT CREATE, INSERT, SELECT, DELETE, UPDATE, DROP on $MYSQL_DATABASE.* to $MYSQL_USER@localhost;" >> $tfile \
+    && echo "GRANT ALL PRIVILEGES on *.* to $MYSQL_USER@localhost;" >> $tfile \
+    && cat /usr/share/zoneminder/db/zm_create.sql >> $tfile \
     && cat $tfile \
-    && /usr/bin/mysqld --user=mysql --bootstrap --verbose=0 < $tfile \
-    && rm -f $tfile
+    && /usr/bin/mysqld --user=mysql --bootstrap --verbose < $tfile \
+    && rm -f $tfile \
+    && sed -i 's/^;\{0,1\}\(user\) .*/user = lighttpd/g' /etc/php5/php-fpm.conf \
+    && sed -i 's/^;\{0,1\}\(group\) .*/group = lighttpd/g' /etc/php5/php-fpm.conf \
+    && sed -i 's/^#\(\( \)*include "mod_cgi.conf"\)$/\1/' /etc/lighttpd/lighttpd.conf \
+    && sed -i 's/^#\(\( \)*include "mod_fastcgi_fpm.conf"\)$/\1/' /etc/lighttpd/lighttpd.conf \
+    && sed -i '/\( \)*cgi.assign/a "" => "",' /etc/lighttpd/mod_cgi.conf \
+    && sed -i 's/\(ZM_WEB_USER\).*/ZM_WEB_USER=lighttpd/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_WEB_GROUP\).*/ZM_WEB_GROUP=lighttpd/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_DB_TYPE\).*/ZM_DB_TYPE=mysql/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_DB_HOST\).*/ZM_DB_HOST=localhost/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_DB_NAME\).*/ZM_DB_NAME=zm/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_DB_USER\).*/ZM_DB_USER=zmuser/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_DB_PASS\).*/ZM_DB_PASS=zmuser/g' /etc/zm.conf \
+    && sed -i 's/\(ZM_SERVER_HOST\).*/ZM_SERVER_HOST=/g' /etc/zm.conf \
+    && chown lighttpd.lighttpd /etc/zm.conf
 
 # install raspalarm app
 ADD @dockerContainerJarName@-@dockerContainerJarVersion@.jar app.jar
@@ -57,9 +71,14 @@ ADD fcmjava.properties fcmjava.properties
 ADD etc/init.d/raspalarm.sh /etc/init.d/raspalarm
 
 # define start services
-RUN rc-update add mariadb
-RUN rc-update add raspalarm
+RUN rc-update add lighttpd default \
+    && rc-update add mariadb default \
+    && rc-update add php-fpm default \
+    && rc-update add zoneminder default \
+    && rc-update add raspalarm
 
-VOLUME ["/var/lib/mysql"]
+VOLUME ["/var/lib/mysql", "/var/cache/zoneminder"]
+
+EXPOSE 80 8080
 
 CMD ["/sbin/init"]
