--- a/src/main/profile/dev/env.properties
+++ b/src/main/profile/dev/env.properties
@@ -1,5 +1,6 @@
+serverIpAddress=127.0.0.1
 dockerContainerFrom=alpine
-dockerUrl=tcp://127.0.0.1:4243
+dockerUrl=tcp://@serverIpAddress@:4243
 fcmApiKey=YOUR_KEY
 mySqlUser=zmuser
 mySqlPassword=zmuser
